--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Link Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <!-- Link Style CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Hospital/style.css">
     <title>Welcome to LifeCare Hospital</title>
 </head>
 
@@ -39,7 +39,7 @@
 
 
         <div class="img">
-            <img src="images/home_img.png" alt="">
+            <img src="Hospital/images/home_img.png" alt="">
         </div>
 
 
@@ -74,7 +74,7 @@
             </div>
 
             <div class="img">
-                <img src="images/about.png" alt="">
+                <img src="Hospital/images/about.png" alt="">
             </div>
 
 
@@ -124,7 +124,7 @@
         <div class="boxContainer">
 
             <div class="box">
-                <img src="images/d1.jpg" alt="">
+                <img src="Hospital/images/d1.jpg" alt="">
                 <h3>Dr Prakash</h3>
                 <span>Neurologist</span>
                 <div class="icons">
@@ -135,7 +135,7 @@
             </div>
 
             <div class="box">
-                <img src="images/d5.jpg" alt="">
+                <img src="Hospital/images/d5.jpg" alt="">
                 <h3>Dr Namita</h3>
                 <span>Gynacologist</span>
                 <div class="icons">
@@ -146,7 +146,7 @@
             </div>
 
             <div class="box">
-                <img src="images/d3.jpg" alt="">
+                <img src="Hospital/images/d3.jpg" alt="">
                 <h3>Dr Raghav</h3>
                 <span>Heart specialist</span>
                 <div class="icons">
@@ -157,7 +157,7 @@
             </div>
 
             <div class="box">
-                <img src="images/d4.jpg" alt="">
+                <img src="Hospital/images/d4.jpg" alt="">
                 <h3>Dr Jhon</h3>
                 <span>Orthopedic</span>
                 <div class="icons">
@@ -168,7 +168,7 @@
             </div>
 
             <div class="box">
-                <img src="images/d2.jpg" alt="">
+                <img src="Hospital/images/d2.jpg" alt="">
                 <h3>Dr Anup</h3>
                 <span>Pediatrician</span>
                 <div class="icons">
@@ -180,7 +180,7 @@
 
 
             <div class="box">
-                <img src="images/d6.jpg" alt="">
+                <img src="Hospital/images/d6.jpg" alt="">
                 <h3>Dr Ankita</h3>
                 <span>Gen Physician</span>
                 <div class="icons">
@@ -270,7 +270,7 @@
         <div class="row">
 
             <div class="img">
-                <img src="images/book.png" alt="">
+                <img src="Hospital/images/book.png" alt="">
             </div>
 
             <form action="">
@@ -296,7 +296,7 @@
         <div class="boxContainer">
 
             <div class="box">
-                <img src="images/pic-1.png" alt="">
+                <img src="Hospital/images/pic-1.png" alt="">
                 <h3>Jhon woe</h3>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -309,7 +309,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pic-2.png" alt="">
+                <img src="Hospital/images/pic-2.png" alt="">
                 <h3>Lara shey</h3>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -322,7 +322,7 @@
             </div>
 
             <div class="box">
-                <img src="images/pic-3.png" alt="">
+                <img src="Hospital/images/pic-3.png" alt="">
                 <h3>David mitchel</h3>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -352,7 +352,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-1.jpg" alt="">
+                    <img src="Hospital/images/blog-1.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="icon">
@@ -368,7 +368,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-2.jpg" alt="">
+                    <img src="Hospital/images/blog-2.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="icon">
@@ -383,7 +383,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-3.jpg" alt="">
+                    <img src="Hospital/images/blog-3.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="icon">
@@ -432,7 +432,7 @@
     <!-- Theme toggle End -->
 
 
-    <script src="index.js"></script>
+    <script src="Hospital/index.js"></script>
 
 </body>
 
